cabal-version: 2.2

name: ff-qt
version: 0.9

build-type: Simple
extra-source-files: MainWindow.hpp Types.hpp

executable ff-qt
    default-language: Haskell2010

    build-depends:
        -- global
        base,
        bytestring,
        containers,
        extra,
        inline-c,
        inline-c-cpp,
        template-haskell,
        text,
        time,

        -- organization
        ron-storage,

        -- project
        ff-core

    ghc-options: -fPIC
    main-is: Main.hs
    other-modules:
        Paths_ff_qt

    if os(linux)
        extra-libraries: Qt5Core Qt5Gui Qt5Widgets
        include-dirs:
            /usr/include/x86_64-linux-gnu/qt5
            /usr/include/x86_64-linux-gnu/qt5/QtWidgets
    if os(osx)
        -- cxx-options: -std=gnu++11
            -- TODO(cblp, 2019-02-08) why this doesn't work?
        ghc-options:
            -pgmc=gcc-8
                -- hack to use C++11
            -pie
                -- hack to use gcc
        ghc-options:
            -framework-path=/usr/local/opt/qt5/lib
            -framework=QtCore
            -framework=QtGui
            -framework=QtWidgets
            -optl=-stdlib=libstdc++
            -optl=-lstdc++
        include-dirs:
            /usr/local/opt/qt5/include
            /usr/local/opt/qt5/include/QtCore
            /usr/local/opt/qt5/include/QtWidgets
